# langgit

./: .buildinfo  .gitignore  README.html  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: README.md
_sources/notebooks/: langit.ipynb
docs/: _config.yml  _toc.yml  requirements.txt
notebooks/: langit.html  langit.ipynb
